.disabled/.monitoring-stack/thanos-ruler/thanos-ruler-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: thanos-ruler-tls
  name: thanos-ruler
spec:
  ports:
  - name: web
    port: 9091
    targetPort: web
  - name: grpc
    port: 10901
    targetPort: grpc
  selector:
    app: thanos-ruler
    thanos-ruler: wheel
  sessionAffinity: ClientIP
