.disabled/.monitoring-stack/thanos-ruler/thanos-ruler-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: thanos-ruler
spec:
  host: thanos-ruler-monitoring-stack.apps.okd.baloise.dev
  port:
    targetPort: web
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: thanos-ruler
    weight: 100
  wildcardPolicy: None
